apps/minecraft-server/nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-service
  namespace: minecraft-server
spec:
  type: NodePort
  selector:
    app: minecraft
  ports:
  - name: minecraft-service-port
    protocol: TCP
    port: 25565
    targetPort: minecraft-port
    nodePort: 30000
