apps/minecraft-server/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft-ingress
  namespace: minecraft-server
spec:
  rules:
  - host: minecraft.boredotter.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minecraft
            port:
              number: 25565
