apps/minecraft-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-cluster-issuer"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: minecraft
  namespace: minecraft-server
spec:
  tls:
  - hosts:
    - mc.boredotter.dev
    secretName: minecraft-server-tls
  rules:
  - host: mc.boredotter.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minecraft
            port:
              number: 25565
